# mame-software-lists

./: .env  .gitignore  Cargo.toml  diesel.toml
configs/: emulators.json  emulators.json.example  paths.json.example  systems.json
migrations/2024-06-16-173243_software_list/: down.sql  up.sql
migrations/2024-06-16-173957_machine/: down.sql  up.sql
migrations/2024-06-16-174733_rom/: down.sql  up.sql
migrations/2024-06-24-150015_add_macine_rom_mapper_table/: down.sql  up.sql
migrations/2024-07-01-195612_add_have_field_to_roms_table/: down.sql  up.sql
migrations/2024-07-04-180409_add_name_to_machine/: down.sql  up.sql
migrations/2024-07-07-193825_add_systems_table/: up.sql
migrations/2024-07-07-195618_add_system_id_field_to_software_list/: down.sql  up.sql
migrations/2024-07-30-201847_add_available_column_to_roms/: down.sql  up.sql
src/: database.rs  file_reader.rs  lib.rs  main.rs  models.rs  schema.rs  software_list_models.rs  xml_parser.rs
src/archives/: zip_util.rs
src/configuration/: emulators.rs  mod.rs  paths.rs
src/data_access/: data_access_provider.rs  mod.rs
src/database/: machines.rs  mod.rs  roms.rs  software_lists.rs  systems.rs
src/emulators/: emulator_runner.rs  mod.rs
src/files/: mod.rs  scan_archives.rs
src/software_lists/: fetch_software_list.rs  mod.rs  process.rs  software_list_file_scanner.rs
src/systems/: systems.rs
src/ui/: combobox.rs  emulators_combobox.rs  machine_panel.rs  machines_list.rs  mame_software_list_app.rs  message_dialog.rs  mod.rs  rom_selection_options.rs  roms_list.rs  scan_files_dialog.rs  (+5 more)
(+5 files in other folders)
