[package]
name = "mame_software_lists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.6"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
